feat: update package.json with additional dependencies and add package-lock.json

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "tsc": "^2.0.4",
@@ -12,6 +14,8 @@
     "vitest": "^3.2.4"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/supertest": "^6.0.3",
@@ -21,6 +25,7 @@
   },
   "description": "",
   "scripts": {
+    "dev": "ts-node src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
