--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,32 +12,38 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.85.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.1",
+    "types": "^0.1.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.0",
     "@eslint/js": "^9.32.0",
-    "@storybook/addon-a11y": "^9.1.1",
+    "@storybook/addon-a11y": "^9.1.2",
     "@storybook/addon-docs": "^9.1.1",
     "@storybook/addon-onboarding": "^9.1.1",
-    "@storybook/addon-vitest": "^9.1.1",
-    "@storybook/react-vite": "^9.1.1",
-    "@types/react": "^19.1.9",
+    "@storybook/addon-vitest": "^9.1.2",
+    "@storybook/react-vite": "^9.1.2",
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.7.0",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
+    "axios": "^1.11.0",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-storybook": "^9.1.1",
     "globals": "^16.3.0",
+    "msw": "^2.10.5",
+    "playwright": "^1.54.2",
     "storybook": "^9.1.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.0",
     "vite": "^7.1.0",
-    "vitest": "^3.2.4",
-    "@vitest/browser": "^3.2.4",
-    "playwright": "^1.54.2",
-    "@vitest/coverage-v8": "^3.2.4"
+    "vitest": "^3.2.4"
   }
 }
