--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,14 @@ Thumbs.db
 .pnp
 .pnp.js
 
-# Archivos de entorno
-.env
-.env.local
-.env.development
-.env.production
+# Archivos de entorno y secretos
+.env*
+!.env.example
+*.key
+*.pem
+*.crt
+secrets.json
+service-account.json
 
 # Logs y caché
 npm-debug.log*
