--- a/domain/package.json
+++ b/domain/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "run test": "jest"
+    "test": "vitest --run",
+    "test:watch": "vitest",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
